welcome.lessons.welcome.instructions.Instructions.scala.error
Program:10: error: not found: value droit
droit();
^Program:17: error: not found: value droit
droit();
^Program:24: error: not found: value droit
droit();
^