welcome.lessons.welcome.instructions.Instructions.scala.code
baisseBrosse();
leveBrosse();
avance();
baisseBrosse();
leveBrosse();
avance();
baisseBrosse();
leveBrosse();
droit();
avance();
baisseBrosse();
leveBrosse();
avance();
baisseBrosse();
leveBrosse();
droit();
avance();
baisseBrosse();
leveBrosse();
avance();
baisseBrosse();
leveBrosse();
droit();
avance();
baisseBrosse();
leveBrosse();